Fix some issues on mobile

--- a/src/app/_components/about-me/about-me.module.scss
+++ b/src/app/_components/about-me/about-me.module.scss
@@ -76,6 +76,11 @@
 					width: 68px;
 					height: 80px;
 				}
+
+				@include mobile {
+					width: 32px;
+					height: 28px;
+				}
 			}
 		}
 	}
