--- a/src/app/_components/dots/dots.module.scss
+++ b/src/app/_components/dots/dots.module.scss
@@ -1,9 +1,15 @@
+@import 'src/shared/scss/_media-queries';
+
 .dots {
 	display: flex;
 	align-items: center;
 	gap: 16px;
 	position: fixed;
 	bottom: 48px;
+
+	@include mobile {
+		bottom: 24px;
+	}
 	-webkit-animation: slide-in-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
 		both;
 	animation: slide-in-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
